<resources>
    <string name="app_name">AssistAndroidApp</string>
    <string name="Login">Login</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="ask_dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_to">Register</string>
    <string name="input_place_f_name">First Name</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="input_place_l_name">Last Name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="input_place_email">Email Address</string>
    <string name="input_place_password">Password</string>
    <string name="register_buttton">REGISTER</string>
    <string name="ask_have_account">Already have an account?</string>
    <string name="input_place_confirm_password">Confirm Password</string>
    <string name="toolbar_title">Tasks</string>
    <string name="side_menu_toolbar">ToDoListApp</string>
    <string name="side_menu_toolbar_category">Category</string>
    <string name="side_menu_toolbar_personal">Personal</string>
    <string name="side_menu_toolbar_work">Work</string>
    <string name="side_menu_toolbar_school">School</string>
    <string name="tasks_calendar_activity">Tasks</string>
    <string name="calendar_toolbar">Calendar</string>
    <string name="Name_add_task">Name</string>
    <string name="add_task">Add task</string>
    <string name="enter_name_add_task">Enter Name</string>
    <string name="deadline_add_task">Deadline</string>
    <string name="type_deadline_add_task">hh:mm DD/MM/YYYY</string>
    <string name="description_add_task">Describe the task</string>
    <string name="description_text">Description</string>
    <string name="personal_radio_button">Personal</string>
    <string name="work_radio_button">Work</string>
    <string name="school_radio_button">School</string>
    <string name="to_do_main_status">To do</string>
    <string name="in_progress_main_status">In progress</string>
    <string name="done_main_status">Done</string>
</resources>