<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<include
    android:id="@+id/side_menu_toolbar"
    layout="@layout/side_menu_toolbar"
    />
    <TextView
        android:id="@+id/side_menu_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_menu_toolbar_category"
        android:textSize="@dimen/text_30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/side_menu_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/space_24dp"
        />
    <TextView
        android:id="@+id/side_menu_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_menu_toolbar_personal"
        android:textSize="@dimen/space_24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/side_menu_category"
        app:layout_constraintEnd_toEndOf="@+id/side_menu_category"
        android:layout_marginTop="@dimen/space_24dp"
        />
    <TextView
        android:id="@+id/side_menu_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_menu_toolbar_work"
        android:textSize="@dimen/space_24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/side_menu_personal"
        app:layout_constraintStart_toStartOf="@+id/side_menu_personal"
        android:layout_marginTop="@dimen/space_24dp"
        />
    <TextView
        android:id="@+id/side_menu_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_menu_toolbar_school"
        android:textSize="@dimen/space_24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/side_menu_work"
        app:layout_constraintStart_toStartOf="@+id/side_menu_work"
        android:layout_marginTop="@dimen/space_24dp"
        />

    <ImageView
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/side_menu_school"
        android:background="@drawable/log_out"
        />
</androidx.constraintlayout.widget.ConstraintLayout>