<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.register.RegisterActivity"
        tools:ignore="RedundantNamespace">

        <TextView
            android:id="@+id/register_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_40sp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/space_7sp"
            android:text="@string/register_to"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/space_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_place_f_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_24dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:lineSpacingExtra="@dimen/space_5dp"
            android:text="@string/input_place_f_name"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_to" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstName_txtInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginEnd="@dimen/space_24dp"
            android:background="@drawable/round_rect_shape"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_place_f_name"
            app:layout_constraintTop_toBottomOf="@+id/text_place_f_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName_txtInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hint_first_name"
                android:paddingBottom="@dimen/space_10sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_place_l_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:lineSpacingExtra="@dimen/space_5dp"
            android:text="@string/input_place_l_name"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintStart_toStartOf="@+id/text_place_f_name"
            app:layout_constraintTop_toBottomOf="@+id/firstName_txtInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastName_txtInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginEnd="@dimen/space_24dp"
            android:background="@drawable/round_rect_shape"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_place_l_name"
            app:layout_constraintTop_toBottomOf="@+id/text_place_l_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName_txtInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hint_last_name"
                android:paddingBottom="@dimen/space_10sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_place_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:lineSpacingExtra="@dimen/space_5dp"
            android:text="@string/input_place_email"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintStart_toStartOf="@+id/lastName_txtInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/lastName_txtInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_txtInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginEnd="@dimen/space_24dp"
            android:background="@drawable/round_rect_shape"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_place_email"
            app:layout_constraintTop_toBottomOf="@+id/text_place_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_txtInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hint_email"
                android:paddingBottom="@dimen/space_10sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_place_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:lineSpacingExtra="@dimen/space_5dp"
            android:text="@string/input_place_password"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintStart_toStartOf="@+id/email_txtInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/email_txtInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_txtInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginEnd="@dimen/space_24dp"
            android:background="@drawable/round_rect_shape"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_place_password"
            app:layout_constraintTop_toBottomOf="@+id/text_place_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_txtInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/space_10sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_place_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:lineSpacingExtra="@dimen/space_5dp"
            android:text="@string/input_place_confirm_password"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintStart_toStartOf="@+id/password_txtInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/password_txtInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_txtInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginEnd="@dimen/space_24dp"
            android:background="@drawable/round_rect_shape"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_place_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/text_place_confirm_password">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_txtInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/space_10sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/space_24dp"
            android:layout_marginStart="@dimen/space_24sp"
            android:layout_marginEnd="@dimen/space_24sp"
            android:backgroundTint="@color/dark_blue"
            android:gravity="center"
            android:text="@string/register_buttton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_txtInputLayout" />


        <TextView
            android:id="@+id/text_place_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/ask_have_account"
            app:layout_constraintEnd_toStartOf="@+id/goto_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <TextView
            android:id="@+id/goto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/space_5dp"
            android:layout_marginTop="20dp"
            android:text="@string/Login"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/text_place_have_account"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>