<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="50sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/space_300dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login_txtInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24dp"
        android:layout_marginStart="@dimen/space_24dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:background="@drawable/round_rect_shape"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login_txtInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:background="@android:color/transparent"
            android:hint="@string/hint_email"
            android:paddingBottom="@dimen/space_10sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login_txtInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:background="@drawable/round_rect_shape"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_login_txtInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/email_login_txtInputLayout">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_login_txtInputEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/space_10sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/space_24dp"
        android:layout_marginTop="@dimen/space_100dp"
        android:layout_marginEnd="@dimen/space_24dp"
        android:gravity="center"
        android:text="@string/Login"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_login_txtInputLayout" />

    <TextView
        android:id="@+id/text_place_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/space_11sp"
        android:gravity="center"
        android:text="@string/ask_dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/space_11sp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/text_place_no_account"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>